# liveduino

./: .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  TODO.md  pyproject.toml
.agents/skills/create-branch/: SKILL.md
.agents/skills/create-commit/: SKILL.md
.agents/skills/make-pr/: SKILL.md
.agents/skills/review-pr/: SKILL.md
.agents/skills/write-issue/: SKILL.md  template
.claude/skills/create-branch/: SKILL.md
.claude/skills/create-commit/: SKILL.md
.claude/skills/make-pr/: SKILL.md
.claude/skills/review-pr/: SKILL.md
.claude/skills/write-issue/: SKILL.md
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/skills/create-branch/: SKILL.md
.github/skills/create-commit/: SKILL.md
.github/skills/make-pr/: SKILL.md
.github/skills/write-issue/: SKILL.md
.github/workflows/: code-quality.yaml  firmware.yaml  publish.yaml  security.yaml  tests.yaml  todo.yaml
docs/: API.md  ARCHITECTURE.md  BOARDS.md  CLI.md  CONNECTIONS.md  DEVELOPMENT.md  README.md
firmware/: README.md
firmware/arduino/: README.md
firmware/pinguino/firmata/: PinguinoFirmata.pde  README.md
firmware/pinguino/live/: README.md
legacy/pinguino/: usb_interpreter.pde
legacy/python/: MANIFEST
scripts/: build_firmware.py
src/liveduino/: __init__.py  cli.py  connection.py  constants.py  discovery.py  exceptions.py  i2c.py  serial_relay.py  types.py  utilities.py
src/liveduino/boards/: __init__.py  board.py  pinguino.py  registry.py
src/liveduino/boards/catalog/: __init__.py  arduino_bt.py  arduino_duemilanove.py  arduino_ethernet.py  arduino_fio.py  arduino_mini.py  arduino_nano.py  arduino_ng.py  arduino_pro_mini.py  arduino_uno.py  arduino_uno_mini.py  (+14 more)
src/liveduino/drivers/: __init__.py  base.py  bluetooth.py  serial.py  socket_driver.py  tcp.py
src/liveduino/firmware/: __init__.py  manifest.json  standardfirmata-bt.hex  standardfirmata-diecimila.hex  standardfirmata-fio.hex  standardfirmata-lilypad.hex  standardfirmata-mini.hex  standardfirmata-unomini.hex  standardfirmataethernet-ethernet.hex
src/liveduino/programmers/: __init__.py  firmware.py  intel_hex.py  stk500v1.py
src/liveduino/protocols/: __init__.py  base.py  firmata.py
tests/: __init__.py
tests/integration/: __init__.py  test_flash.py  test_uno_serial.py
tests/shared/: __init__.py  fake_driver.py  mock_protocol.py
tests/unit/: __init__.py  test_bluetooth_driver.py  test_board.py  test_boards.py  test_cli.py  test_connection.py  test_discovery.py  test_firmata.py  test_firmware.py  test_intel_hex.py  test_package.py  test_protocol_factory.py  test_serial_driver.py  test_serial_relay.py  test_stk500v1.py  test_tcp_driver.py  test_utilities.py  test_wire.py
